[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/backgrounds/bathroom.png" type="Texture" id=1]
[ext_resource path="res://assets/images/items/Noni2.png" type="Texture" id=2]
[ext_resource path="res://src/Bathroom/Bathroom.gd" type="Script" id=3]
[ext_resource path="res://assets/images/items/Noni_third.png" type="Texture" id=4]
[ext_resource path="res://assets/Audio/Sounds/jumpscare1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Audio/Sounds/door_slam.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Audio/BGM/Chilly_wind.wav" type="AudioStream" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Bathroom" type="Sprite" parent="."]
position = Vector2( 448, 335 )
texture = ExtResource( 1 )

[node name="Noni2" type="Sprite" parent="."]
position = Vector2( 521, 364 )
scale = Vector2( 2.00781, 2.00781 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="NoniDeadEnd" type="Node2D" parent="."]

[node name="NoniThird" type="Sprite" parent="NoniDeadEnd"]
visible = false
position = Vector2( 447.75, 335.25 )
scale = Vector2( 6.94141, 8.49359 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="NoniDeadEnd"]
visible = false
position = Vector2( 475, 214 )
stream = ExtResource( 5 )
volume_db = -9.104

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 526, 208 )
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 526, 208 )
stream = ExtResource( 7 )
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
